--- a/Delta.Presenze.Service/pom.xml
+++ b/Delta.Presenze.Service/pom.xml
@@ -9,9 +9,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-         <java.version>1.8</java.version>
+        <java.version>1.8</java.version>
+        <spring.version>5.0.2.RELEASE</spring.version>
+        <spring-security.version>5.0.0.RELEASE</spring-security.version>
+        <spring-security-core.version>5.0.0.RELEASE</spring-security-core.version>     
     </properties>        
-           <dependencies>
+    <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>Delta.Presenze.Model</artifactId>
@@ -21,6 +24,24 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>Delta.Presenze.Data</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${spring.version}</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring-security.version}</version>
+            <type>jar</type>
+        </dependency>
+         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring-security.version}</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
