--- a/PresenzeDelta/pom.xml
+++ b/PresenzeDelta/pom.xml
@@ -12,9 +12,9 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>5.1.3.RELEASE</spring.version>
-        <spring-security.version>5.1.2.RELEASE</spring-security.version>
-        <spring-security-core.version>5.1.2.RELEASE</spring-security-core.version>     
+        <spring.version>5.0.2.RELEASE</spring.version>
+        <spring-security.version>5.0.0.RELEASE</spring-security.version>
+        <spring-security-core.version>5.0.0.RELEASE</spring-security-core.version>     
         <hibernate.version>5.4.0.Final</hibernate.version>
         <mysql.version>8.0.13</mysql.version>
         <junit-version>4.12</junit-version>
@@ -42,7 +42,7 @@
             <version>8.0</version>
             <scope>provided</scope>
         </dependency>
-             <dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>${spring.version}</version>
@@ -51,21 +51,22 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.3.0.RELEASE</version>
+            <version>${spring.version}</version>
             <type>jar</type>
         </dependency>
   
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>4.3.0.RELEASE</version>
+            <version>${spring.version}</version>
             <type>jar</type>
         </dependency>
   
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
+          <version>${spring.version}</version>
+            <type>jar</type>
         </dependency>
   
         <dependency>
@@ -80,12 +81,30 @@
             <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
-     <dependency>
-    <groupId>org.springframework.security</groupId>
-    <artifactId>spring-security-core</artifactId>
-    <version>${spring-security.version}</version>
-     </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
+     
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
   
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
+  
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.2</version>
+        </dependency>
         <!-- Hibernate 4 dependencies -->
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -115,8 +134,8 @@
   
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
-           <artifactId>javax.servlet.jsp-api</artifactId>
-             <version>2.3.1</version>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.3.1</version>
             <scope>provided</scope>
         </dependency>
   
