--- a/Delta.Presenze.Model/pom.xml
+++ b/Delta.Presenze.Model/pom.xml
@@ -16,7 +16,7 @@
            <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>4.3.5.Final</version>
+               <version>${hibernate.version}</version>
                 <type>jar</type>
            </dependency>
   
@@ -40,7 +40,7 @@
             <dependency>
                   <groupId>org.hibernate</groupId>
                   <artifactId>hibernate-validator</artifactId>
-                  <version>5.0.3.Final</version>
+                  <version>${hibernate.version}</version>
                   <type>jar</type>
             </dependency>
       </dependencies>
