--- a/Delta.Presenze.Data/pom.xml
+++ b/Delta.Presenze.Data/pom.xml
@@ -10,14 +10,14 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
             <hibernate.version>5.4.0.Final</hibernate.version>
-                <spring.version>5.1.3.RELEASE</spring.version>
+                <spring.version>5.0.2.RELEASE</spring.version>
          <java.version>1.8</java.version>
     </properties>
      <dependencies>
            <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>4.3.5.Final</version>
+           <version>${hibernate.version}</version>
                 <type>jar</type>
            </dependency>
   
@@ -41,7 +41,7 @@
             <dependency>
                   <groupId>org.hibernate</groupId>
                   <artifactId>hibernate-validator</artifactId>
-                  <version>5.0.3.Final</version>
+                  <version>${hibernate.version}</version>
                   <type>jar</type>
             </dependency>
           <dependency>
@@ -52,19 +52,26 @@
                <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
+               <version>${spring.version}</version>
+                      <type>jar</type>
+               </dependency>
   
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.3.0.RELEASE</version>
+               <version>${spring.version}</version>
             <type>jar</type>
         </dependency>
           <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-beans</artifactId>
-               <version>4.3.0.RELEASE</version>
+                <version>${spring.version}</version>
+               <type>jar</type>
+          </dependency>
+          <dependency>
+               <groupId>org.springframework</groupId>
+               <artifactId>spring-orm</artifactId>
+                 <version>${spring.version}</version>
                <type>jar</type>
           </dependency>
      </dependencies>
