--- a/Delta.Presenze.Data/pom.xml
+++ b/Delta.Presenze.Data/pom.xml
@@ -74,5 +74,10 @@
                  <version>${spring.version}</version>
                <type>jar</type>
           </dependency>
+           <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.2</version>
+        </dependency>
      </dependencies>
 </project>
