--- a/Delta.Presenze.Data/src/main/java/com/deltasi/presenze/dao/db.properties
+++ b/Delta.Presenze.Data/src/main/java/com/deltasi/presenze/dao/db.properties
@@ -1,4 +1,7 @@
-# MySQL connection properties
+# To change this license header, choose License Headers in Project Properties.
+# To change this template file, choose Tools | Templates
+# and open the template in the editor.
+
 mysql.driver=com.mysql.cj.jdbc.Driver
 mysql.jdbcUrl=jdbc:mysql://localhost:3306/MySQLDELTA?useSSL=false
 mysql.username=TOMCAT
@@ -14,5 +17,3 @@ hibernate.c3p0.max_size=20
 hibernate.c3p0.acquire_increment=1
 hibernate.c3p0.timeout=1800
 hibernate.c3p0.max_statements=150# To change this license header, choose License Headers in Project Properties.
-
-
