--- a/PresenzeDelta/pom.xml
+++ b/PresenzeDelta/pom.xml
@@ -18,6 +18,7 @@
         <hibernate.version>5.4.0.Final</hibernate.version>
         <mysql.version>8.0.13</mysql.version>
         <junit-version>4.12</junit-version>
+         <c3p0.version>0.9.5.2</c3p0.version>
         <servlet-api-version>3.1.0</servlet-api-version>
         <jsp-version>2.3.1</jsp-version>
         <jstl-version>1.2</jstl-version>
