--- a/Delta.Presenze.Data/src/main/resources/db.properties
+++ b/Delta.Presenze.Data/src/main/resources/db.properties
@@ -1,8 +1,8 @@
-# MySQL connection properties
+
 mysql.driver=com.mysql.cj.jdbc.Driver
-mysql.jdbcUrl=jdbc:mysql://localhost:3306/MySQLDELTA?useSSL=false
+mysql.jdbcUrl=jdbc:mysql://localhost:3306/presenze?autoReconnect=true&useSSL=false
 mysql.username=TOMCAT
-mysql.password=ROBERTA4@
+mysql.password=TORWALDSEN
 
 # Hibernate properties
 hibernate.show_sql=true
@@ -13,6 +13,4 @@ hibernate.c3p0.min_size=5
 hibernate.c3p0.max_size=20
 hibernate.c3p0.acquire_increment=1
 hibernate.c3p0.timeout=1800
-hibernate.c3p0.max_statements=150# To change this license header, choose License Headers in Project Properties.
-
-
+hibernate.c3p0.max_statements=150
