--- a/Delta.Presenze.Data/pom.xml
+++ b/Delta.Presenze.Data/pom.xml
@@ -5,96 +5,96 @@
     <artifactId>Delta.Presenze.Data</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-     <repositories>
-          <repository>
-               <id>unknown-jars-temp-repo</id>
-               <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
-               <url>file:${project.basedir}/lib</url>
-          </repository>
-     </repositories>
-     <properties>
+    <repositories>
+        <repository>
+            <id>unknown-jars-temp-repo</id>
+            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
+            <url>file:${project.basedir}/lib</url>
+        </repository>
+    </repositories>
+    <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-            <hibernate.version>5.4.0.Final</hibernate.version>
-                <spring.version>5.0.2.RELEASE</spring.version>
-         <java.version>1.8</java.version>
+        <hibernate.version>5.4.0.Final</hibernate.version>
+        <hibernate.validator.version>5.4.0.Final</hibernate.validator.version>
+        <spring.version>5.0.2.RELEASE</spring.version>
+        <java.version>1.8</java.version>
     </properties>
-     <dependencies>
-           <dependency>
+    <dependencies>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-           <version>${hibernate.version}</version>
-                <type>jar</type>
-           </dependency>
-  
+            <version>${hibernate.version}</version>
+            <type>jar</type>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jboss-logging</artifactId>
+                    <groupId>org.jboss.logging</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>  
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-c3p0</artifactId>
-            <version>${hibernate.version}</version>
+            <version>${hibernate.version}</version>           
+        </dependency>       
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.0.Final</version>
+            <type>jar</type>
         </dependency>
-            <dependency>
-                  <groupId>org.hibernate.javax.persistence</groupId>
-                  <artifactId>hibernate-jpa-2.1-api</artifactId>
-                  <version>1.0.0.Final</version>
-                  <type>jar</type>
-            </dependency>
-            <dependency>
-                  <groupId>javax.validation</groupId>
-                  <artifactId>validation-api</artifactId>
-                  <version>1.1.0.Final</version>
-                  <type>jar</type>
-            </dependency>
-            <dependency>
-                  <groupId>org.hibernate</groupId>
-                  <artifactId>hibernate-validator</artifactId>
-                  <version>${hibernate.version}</version>
-                  <type>jar</type>
-            </dependency>
-          <dependency>
-               <groupId>${project.groupId}</groupId>
-               <artifactId>Delta.Presenze.Model</artifactId>
-               <version>${project.version}</version>
-          </dependency>
-               <dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate.validator.version}</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>Delta.Presenze.Model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-               <version>${spring.version}</version>
-                      <type>jar</type>
-               </dependency>
-  
+            <version>${spring.version}</version>
+            <type>jar</type>
+        </dependency>  
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-               <version>${spring.version}</version>
+            <version>${spring.version}</version>
             <type>jar</type>
         </dependency>
-          <dependency>
-               <groupId>org.springframework</groupId>
-               <artifactId>spring-beans</artifactId>
-                <version>${spring.version}</version>
-               <type>jar</type>
-          </dependency>
-          <dependency>
-               <groupId>org.springframework</groupId>
-               <artifactId>spring-orm</artifactId>
-                 <version>${spring.version}</version>
-               <type>jar</type>
-          </dependency>
-           <dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${spring.version}</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring.version}</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
             <version>0.9.5.2</version>
+        </dependency>      
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.13</version>
         </dependency>       
-          <dependency>
-               <groupId>org.hibernate</groupId>
-               <artifactId>hibernate-entitymanager</artifactId>
-               <version>${hibernate.version}</version>
-          </dependency>
-          <dependency>
-    <groupId>mysql</groupId>
-    <artifactId>mysql-connector-java</artifactId>
-    <version>8.0.13</version>
-  </dependency>      
-     </dependencies>
+       </dependencies>
 </project>
