--- a/Delta.Presenze.Data/src/main/resources/db.properties
+++ b/Delta.Presenze.Data/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 
 mysql.driver=com.mysql.cj.jdbc.Driver
-mysql.jdbcUrl=jdbc:mysql://localhost:3306/presenze?autoReconnect=true&useSSL=false
+mysql.jdbcUrl=jdbc:mysql://localhost:3306/presenze?serverTimezone=UTC&autoReconnect=true&useSSL=false
 mysql.username=TOMCAT
 mysql.password=TORWALDSEN
 
