--- a/PresenzeDelta/pom.xml
+++ b/PresenzeDelta/pom.xml
@@ -10,22 +10,18 @@
     <name>PresenzeDelta</name>
 
     <properties>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>5.0.2.RELEASE</spring.version>
         <spring-security.version>5.0.0.RELEASE</spring-security.version>
         <spring-security-core.version>5.0.0.RELEASE</spring-security-core.version>     
-        <hibernate.version>5.4.0.Final</hibernate.version>
-        <mysql.version>8.0.13</mysql.version>
         <junit-version>4.12</junit-version>
-         <c3p0.version>0.9.5.2</c3p0.version>
         <servlet-api-version>3.1.0</servlet-api-version>
         <jsp-version>2.3.1</jsp-version>
         <jstl-version>1.2</jstl-version>
-        <java.version>1.8</java.version>
-        
-    </properties>
-    
+        <java.version>1.8</java.version>        
+    </properties>    
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -47,116 +43,82 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>${spring.version}</version>
-        </dependency>
-  
+        </dependency>  
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
             <type>jar</type>
-        </dependency>
-  
+        </dependency>  
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>${spring.version}</version>
             <type>jar</type>
-        </dependency>
-  
+        </dependency>  
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-          <version>${spring.version}</version>
+            <version>${spring.version}</version>
             <type>jar</type>
-        </dependency>
-  
+        </dependency>  
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
-        </dependency>
-  
+        </dependency>  
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
             <scope>test</scope>
-        </dependency>
-        
+        </dependency>        
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
             <version>${spring-security.version}</version>
-        </dependency>
-     
+        </dependency>     
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
             <version>${spring-security.version}</version>
-        </dependency>
-  
+        </dependency>  
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
             <version>${spring-security.version}</version>
-        </dependency>
-  
-        <dependency>
-            <groupId>com.mchange</groupId>
-            <artifactId>c3p0</artifactId>
-            <version>0.9.5.2</version>
-        </dependency>
-        <!-- Hibernate 4 dependencies -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>${hibernate.version}</version>
-        </dependency>
-  
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-c3p0</artifactId>
-            <version>${hibernate.version}</version>
-        </dependency>
-  
-        <!--MYSQL Connector -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
-        </dependency>
-  
+        </dependency>      
         <!-- Servlet and JSP -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${servlet-api-version}</version>
-        </dependency>
-  
+        </dependency>  
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>javax.servlet.jsp-api</artifactId>
             <version>2.3.1</version>
             <scope>provided</scope>
-        </dependency>
-  
+        </dependency>  
         <!-- JSTL dependency -->
         <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
             <version>${jstl-version}</version>
-        </dependency>
-  
+        </dependency>  
         <!-- JUnit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit-version}</version>
             <scope>test</scope>
-        </dependency>
-        
+        </dependency>  
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.4</version>
+        </dependency> 
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -206,5 +168,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
