--- a/Delta.Presenze.Data/pom.xml
+++ b/Delta.Presenze.Data/pom.xml
@@ -95,6 +95,12 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.13</version>
-        </dependency>       
-       </dependencies>
+        </dependency>      
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.12</version>
+            <type>jar</type>
+        </dependency>      
+         </dependencies>
 </project>
