--- a/Delta.Presenze.Service/pom.xml
+++ b/Delta.Presenze.Service/pom.xml
@@ -43,5 +43,11 @@
             <version>${spring-security.version}</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.12</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
