--- a/Delta.Presenze.Data/pom.xml
+++ b/Delta.Presenze.Data/pom.xml
@@ -60,7 +60,8 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>Delta.Presenze.Model</artifactId>
-            <version>${project.version}</version>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
