--- a/PresenzeDelta/pom.xml
+++ b/PresenzeDelta/pom.xml
@@ -31,7 +31,14 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>Delta.Presenze.Service</artifactId>
-            <version>${project.version}</version>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.deltasi</groupId>
+            <artifactId>Delta.Presenze.Data</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
