--- a/PresenzeDelta/pom.xml
+++ b/PresenzeDelta/pom.xml
@@ -125,11 +125,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.9.4</version>
         </dependency> 
-         <dependency>
-            <groupId>log4j</groupId>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency> 
+            <version>2.11.1</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
