--- a/Delta.Presenze.Model/pom.xml
+++ b/Delta.Presenze.Model/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>hibernate-validator</artifactId>
             <version>${hibernate.version}</version>
             <type>jar</type>
-        </dependency>        
+        </dependency>   
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>2.11.1</version>
+            <type>pom</type>
+        </dependency>     
     </dependencies>
 </project>
