--- a/PresenzeDelta/pom.xml
+++ b/PresenzeDelta/pom.xml
@@ -20,7 +20,8 @@
         <servlet-api-version>3.1.0</servlet-api-version>
         <jsp-version>2.3.1</jsp-version>
         <jstl-version>1.2</jstl-version>
-        <java.version>1.8</java.version>        
+        <java.version>1.8</java.version>  
+        <jackson.version>2.7.5</jackson.version>      
     </properties>    
     <dependencies>
         <dependency>
@@ -130,6 +131,11 @@
             <artifactId>log4j</artifactId>
             <version>2.11.1</version>
             <type>pom</type>
+        </dependency>
+         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
     <build>
