--- a/PresenzeDelta/pom.xml
+++ b/PresenzeDelta/pom.xml
@@ -132,22 +132,27 @@
             <type>pom</type>
         </dependency>       
         <dependency>
-    <groupId>org.webjars</groupId>
-    <artifactId>jquery</artifactId>
-    <version>3.2.1</version>
-        </dependency>
- 
-<dependency>
-    <groupId>org.webjars</groupId>
-    <artifactId>bootstrap</artifactId>
-    <version>4.1.1</version>
-    <exclusions>
-        <exclusion>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
-        </exclusion>
-    </exclusions>
-</dependency>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>webjars-locator</artifactId>
+            <version>0.30</version>
+        </dependency>
+ 
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.1.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>jquery</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
