--- a/PresenzeDelta/pom.xml
+++ b/PresenzeDelta/pom.xml
@@ -141,7 +141,11 @@
             <artifactId>webjars-locator</artifactId>
             <version>0.30</version>
         </dependency>
- 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.21</version>
+        </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
