--- a/Delta.Presenze.Model/pom.xml
+++ b/Delta.Presenze.Model/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>log4j</artifactId>
             <version>2.11.1</version>
             <type>pom</type>
-        </dependency>     
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.9.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
