--- a/Delta.Presenze.Model/pom.xml
+++ b/Delta.Presenze.Model/pom.xml
@@ -49,5 +49,11 @@
             <version>2.9.0</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.2.RELEASE</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
